; ModuleID = '/home/carl/AnghaBench/libevent/extr_bufferevent_async.c_be_async_run_eventcb.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_bufferevent_async.c_be_async_run_eventcb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferevent = type { i32 }

@BEV_TRIG_DEFER_CALLBACKS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bufferevent*, i16, i32)* @be_async_run_eventcb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @be_async_run_eventcb(%struct.bufferevent* %0, i16 signext %1, i32 %2) #0 {
  %4 = alloca %struct.bufferevent*, align 8
  %5 = alloca i16, align 2
  %6 = alloca i32, align 4
  store %struct.bufferevent* %0, %struct.bufferevent** %4, align 8
  store i16 %1, i16* %5, align 2
  store i32 %2, i32* %6, align 4
  %7 = load %struct.bufferevent*, %struct.bufferevent** %4, align 8
  %8 = load i16, i16* %5, align 2
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @BEV_TRIG_DEFER_CALLBACKS, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @bufferevent_run_eventcb_(%struct.bufferevent* %7, i16 signext %8, i32 %11)
  ret void
}

declare dso_local i32 @bufferevent_run_eventcb_(%struct.bufferevent*, i16 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
